# libd4

./: .dockerignore  .gitignore  CMakeFlags.cmake  CMakeLists.txt  Dockerfile  README.md  libd4.pc.in  libthe-static.pc.in  libthe.pc.in  package.yml  valgrind.supp
.github/workflows/: code-quality.yml  codeql.yml  coverage.yml  docker.yml  install.yml  pre-release.yml  test-coverage.yml  test-docker.yml  test-install.yml  test-release.yml  test-unit.yml  test.yml  unit-tests.yml
cmake/: DownloadOpenSSL.cmake  Examples.cmake  Flags.cmake  Install.cmake  Libraries.cmake  OpenSSL.cmake  Policies.cmake  Tests.cmake  openssl.cmake
examples/: any.c  arc.c  array.c  bool.c  byte.c  char.c  crypto.c  enum.c  error.c  fn.c  globals.c  macro.c  map.c  number.c  object.c  optional.c  rand.c  reference.c  safe.c  ssl.c  string.c  union.c
include/d4/: any.h  arc-macro.h  arc.h  array-macro.h  array.h  bool.h  byte.h  char.h  crypto.h  enum.h  error-type.h  error.h  fn-macro.h  fn.h  globals.h  macro.h  map-macro.h  map.h  number.h  object-macro.h  object.h  optional-macro.h  optional.h  rand.h  reference.h  rune.h  safe.h  ssl.h  string-type.h  string.h  union-macro.h  union.h
include/the/: any.h  array-macro.h  array.h  bool.h  byte.h  char.h  common.h  crypto.h  enum.h  error-type.h  error.h  fn-macro.h  fn.h  globals.h  macro.h  map-macro.h  map.h  number.h  optional-macro.h  optional.h  rand.h  reference.h  rune.h  safe.h  ssl.h  string-type.h  string.h  union-macro.h  union.h
scripts/: check-total-coverage  docker-entrypoint.sh  generate-coverage.sh  mount-git-hooks.sh
src/: any.c  any.h  array.c  array.h  bool.c  bool.h  byte.c  byte.h  char.c  char.h  common.c  enum.c  enum.h  error.c  error.h  fn.c  fn.h  globals.c  globals.h  map.c  map.h  number.c  number.h  object.c  object.h  rune.c  rune.h  safe.c  safe.h  string.c  string.h
test/: any-test.c  any-test.h  arc-test.c  array-test.c  bool-test.c  byte-test.c  char-test.c  crypto-test.c  enum-test.c  error-test.c  error-test.h  fn-test.c  globals-test.c  map-test.c  memtest-test.c  number-test.c  object-test.c  optional-test.c  rand-test.c  reference-test.c  rune-test.c  safe-test.c  ssl-test.c  string-test.c  union-test.c  utils.c  utils.h
